Lession 1: Variables and placeholder

--- a/Code/Tensorflow.ipynb
+++ b/Code/Tensorflow.ipynb
@@ -297,15 +297,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "v3 = tf.constant([\n",
-    "    [1, 2, 3],\n",
-    "    [3, 4, 5]\n",
+    "    [1, 1, 1],\n",
+    "    [3, 3, 2]\n",
     "], dtype=tf.float32, name='2D_matrix')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y2 = v2 + v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2., 3., 4.],\n",
+       "       [6., 7., 7.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.run(y2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Placeholder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create \n",
+    "Placeholder sử dụng trong trường hợp chúng ta cần load dữ liệu đầu vào"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = tf.placeholder(dtype=tf.float32)\n",
+    "p2 = tf.placeholder(dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Asign operator for placeholder\n",
+    "o_add = p1 + p2\n",
+    "o_mul = p1 * p2\n",
+    "o_delta = p1**2 + p2 # Phép tính bình phương p1^2 + p2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"add_5:0\", dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(o_add)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feed value for placeholder (Đưa dữ liệu đầu vào cho 1 biến)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_value = {\n",
+    "    p1 : 20,\n",
+    "    p2 : 10\n",
+    "}\n",
+    "\n",
+    "session.run(o_add, feed_dict=d_value) \n",
+    "# Feed dict: Chúng ta feed 1 mảng giá trị vào trong placeholder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "410.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_value = {\n",
+    "    p1 : 20,\n",
+    "    p2 : 10\n",
+    "}\n",
+    "\n",
+    "session.run(o_delta, feed_dict=d_value) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_value = {\n",
+    "    p1 : 20,\n",
+    "    p2 : 10\n",
+    "}\n",
+    "\n",
+    "session.run(o_mul, feed_dict=d_value) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[30.0, 410.0]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.run([o_add, o_delta], feed_dict=d_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Phân biệt Variables và Placeholder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Variables** Traning mô hình: Các tham số nào cần tranable như các tham số \n",
+    "cần tối ưu các hệ số wait trong mạng neuron hay các hệ số byat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Placeholder**  Dùng để load các dữ liệu đầu vào"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Constant** Dùng cho các tham số nào không thay đổi trong chương trình"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_1 = tf.Variable(name='var_1', initial_value=10)\n",
+    "var_2 = tf.Variable(name='var_2', initial_value=50)\n",
+    "# ten_bien = tf.Variable(name='ten_bien', initial_value gía trị khởi tạo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note** Cần phải khởi tạo biến trước khi đưa vào session và tính toán trên session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.run(var_1.initializer)\n",
+    "# Hàm khởi tạo variable trước khi đưa vào session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.run(var_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note** Thay vì khởi tạo từng biến trong 1 chương trình có rất nhiều biến\n",
+    "không thể khởi tạo thủ công như thế.\n",
+    "<br>\n",
+    "Vậy nên sẽ sử dụng hàm: tf.global_variables_initializer().run(session=session)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.global_variables_initializer().run(session=session)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.run(var_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
